[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timewarp"
description = "A package for time-warping EEG/MEG time-frequency maps"
license = {text = "BSD 3-Clause"}
authors = [
    {name = "Clemens Brunner", email = "clemens.brunner@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["EEG", "MEG", "MNE", "electrophysiology"]
dependencies = [
    "matplotlib >= 3.8.0",
    "mne >= 1.7.0",
    "numpy >= 1.25",
    "pandas >= 2.0.0",
    "scipy >= 1.11.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/timewarp/__init__.py"

[tool.ruff]
line-length = 92

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
